# StarTracker

./: .gitignore  README.md  detections_centroids.csv  opencv_detections_centroids.csv  psf_fit_results.csv  pyproject.toml
src/python/: day1_basics.py  main.py  moment_tracker.py  opencv_moment_tracker.py  psf_fitting.py  star_catalog.py
star_tracker/: __init__.py
star_tracker/algorithms/: __init__.py  psf_fitting.py
star_tracker/pipeline/: pipeline.py
star_tracker/star_catalog/: __init__.py  star_catalog.py
unit_tests/: test_image_moment_analysis.py  test_psf_fitting.py  test_star_catalog.py
